# WAG_optimisation

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  architecture.md  audit_review.md  config_manager.py  data_processor.py  development_timeline.md  error_handler.py  help_manager.py  main.py  path_utils.py  pyproject.toml  requirements.txt  research_prompt_template.md  setup.py  validation_manager.py  visualization.md
Doc/: CODE_OF_CONDUCT.md  LICENSE  architecture.md  audit_report_2025-06-16.md  audit_review.md  development_timeline.md  latest_update.md  latest_update_22.06.md  latest_update_220620252316.md  latest_update_23062025.md  nn.md  ui_architecture.md  uihowto.md
analysis/: data_validation.py  decline_curve_analysis.py  injection_scheme_validator.py  profiler.py  profiler_refactored.py  sensitivity_analyzer.py  uq_engine.py  well_analysis.py
co2eor_optimizer/: PROJECT_STRUCTURE.md  __init__.py  config.json  config_manager.py  core.py  data_processor.py  help_manager.py  main.py  requirements.txt
co2eor_optimizer/analysis/: sensitivity_analyzer.py  uq_engine.py  well_analysis.py
co2eor_optimizer/config/: economic_scenarios.json  help_content.yaml  recovery_config.json  validation_rules.yaml
co2eor_optimizer/core/: __init__.py  data_models.py  eos_models.py  optimisation_engine.py  recovery_models.py
co2eor_optimizer/evaluation/: mmp.py
co2eor_optimizer/parsers/: __init__.py  base_parser.py  eclipse_parser.py  las_parser.py
co2eor_optimizer/ui/: config_widget.py  data_management_widget.py  main_window.py  mmp_well_analysis_widget.py  optimization_widget.py  overview_page.py  resources.qrc  sensitivity_widget.py
co2eor_optimizer/utils/: grdecl_writer.py  i18n_manager.py  project_file_handler.py  units_manager.py
co2eor_optimizer_3211322123/: __init__.py  config_manager.py  data_processor.py  main.py
co2eor_optimizer_3211322123/analysis/: __init__.py  sensitivity_analyzer.py  uq_engine.py  well_analysis.py
co2eor_optimizer_3211322123/config/: base_config.json
co2eor_optimizer_3211322123/core/: __init__.py  data_models.py  eos_models.py  optimisation_engine.py  recovery_models.py
co2eor_optimizer_3211322123/evaluation/: __init__.py  mmp.py
co2eor_optimizer_3211322123/parsers/: __init__.py  base_parser.py  eclipse_parser.py  las_parser.py  validation.py
co2eor_optimizer_3211322123/ui/: ai_assistant_widget.py  config_widget.py  data_management_widget.py  logging_widget.py  main_window.py  mmp_well_analysis_widget.py  optimization_widget.py  sensitivity_widget.py  uq_widget.py
co2eor_optimizer_3211322123/utils/: __init__.py  grdecl_writer.py  report_generator.py
config/: base_config.json  demo_data.json  economic_scenarios.json  fault_properties.json  fluid_composition.json  help_content.yaml  recovery_config.json  uq_and_sensitivity.json
core/: __init__.py  data_integration_engine.py  data_models.py  engine_factory.py  optimisation_engine.py  optimization_analysis.py  plotting_manager.py
core/Phys_engine_full/: __init__.py  breakthrough_physics.py  ccus_physics_engine.py  detailed_engine_adapters.py  enhanced_reservoir_simulator.py  fault_mechanics.py  material_balance.py  mineralization_kinetics.py  multiphase_flow.py  pressure_dynamics.py  time_stepping.py  well_control_logic.py
core/engine_simple/: __init__.py  examples.py  optimization_interface.py  parameter_estimation.py  reservoir_engine.py  storage_efficiency.py  utils.py
core/engine_surrogate/: LITERATURE_REFERENCES.md  __init__.py  analytical_models – копія.py  analytical_models.py  feature_transformer.py  fixed_phd_class.txt  model_factory.py  profile_generator_fast.py  response_surfaces.py  surrogate_engine.py  surrogate_models.py  training_data.py
core/geology/: __init__.py  geostatistical_modeling.py
core/objectives/: __init__.py  base.py  economic.py  production.py  storage.py  wrapper.py
core/simulation/: __init__.py  injection_schemes.py  profile_generator.py  recovery_models.py  simulator_exporter.py
core/unified_engine/: __init__.py
core/utils/: __init__.py  profiler_utils.py
core/validation/: __init__.py  data_quality_validator.py  physical_consistency_validator.py
docs/: SURROGATE_ENGINE_README.md
evaluation/: mmp.py
help/: ai_assistant_widget_help.md  analysis_widget_help.md  config_widget_help.md  data_management_widget_help.md  global_help.md  logging_widget_help.md  optimization_widget_help.md
import/: API_INJ.DATA  BASE_WATER.TXT  DUALPERM.DATA  DUALPORO.DATA  UN_4_dt.las  UN_5_dt.las
parsers/: base_parser.py  validation.py
tests/: __init__.py  test_core.py  test_las_parser.py  test_mmp.py  test_optimization.py  test_well_analysis.py
tests/test_data/: empty_well.las  missing_data.las  no_well.las  valid.las
ui/: ai_assistant_widget.py  analysis_widget.py  config_widget.py  data_management_widget.py  main_window.py  optimization_widget.py  overview_page.py  qt_log_handler.py  sensitivity_widget.py  uq_widget.py
ui/dialogs/: ai_report_features_dialog.py  breakthrough_physics_dialog.py  eos_modeling_dialog.py  injection_scheme_dialog.py  optimization_results_dialog.py  overview_dialog.py  parameter_help_dialog.py  plot_customization_dialog.py  preferences_dialog.py  profiler_dialog.py  recovery_models_dialog.py  report_config_dialog.py  scenario_editor_dialog.py  (+2 more)
utils/: file_association.py  i18n_manager.py  multiprocess_logging.py  preferences_manager.py  project_file_handler.py  report_generator.py  units_manager.py
validation/: empirical_engine_validation.py
(+73 files in other folders)
